tags/2013-08-29_cppreference/Archive/c92f2c80a48ca3c51134061c5b8fcb30-3afcc3bc1f2cd10b247c33a6cde9edad/output
+ g++ -std=c++1y -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:2:23: error: ‘constexpr’ needed for in-class initialization of static data member ‘double S::d’ of non-integral type [-fpermissive]
     static double d = 2.3;
                       ^
